--- a/packages/valory/agents/oracle/aea-config.yaml
+++ b/packages/valory/agents/oracle/aea-config.yaml
@@ -158,6 +158,7 @@ models:
       light_slash_unit_amount: ${int:5000000000000000}
       serious_slash_unit_amount: ${int:8000000000000000}
       sleep_time: ${int:5}
+      termination_from_block: ${int:0}
   server_api:
     args:
       url: ${str:http://192.168.2.17:9999/deposit}
